--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+efreet (0.5.0-20090103-4) asimov; urgency=low
+
+  [ Mikhail Gusarov ]
+  * Fix previous bugfix
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Mon, 29 Jun 2009 18:35:22 +0200
+
 efreet (0.5.0-20090103-3) asimov; urgency=low
 
   [ Mikhail Gusarov ]
