--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+efreet (0.5.0.063-1) zelazny; urgency=low
+
+  * svn-05 snapshot
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Thu, 14 Jan 2010 06:21:15 +0600
+
 efreet (0.5.0.062-1) asimov; urgency=low
 
   * svn-03 snapshot
