Prepare changelog for upload

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+efreet (0.5.0.49898-1) zelazny; urgency=low
+
+  * svn-06 snapshot
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Sat, 03 Jul 2010 00:17:06 +0200
+
 efreet (0.5.0.063-1) zelazny; urgency=low
 
   * svn-05 snapshot
